<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nome App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="campo_digite_cidade">Digite a Cidade</string>
    <string name="button_text">Pesquisar</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>

</resources>